# demo-audit-log-diff

./: .gitattributes  README.md
collections/: requirements.yml
files/: audit.current.seq  audit.previous.seq  profile
playbooks/: audit.yml  build-wheel.yml  dconcat.yml  dconcat_merge.yml  dconcat_reverse.yml  git-clone.yml  inventory  setup.yml  teardown.yml
playbooks/group_vars/: all.yml
python/: wheel-import-test.py
scripts/: .gitattributes  build-wheel.sh  curl-job-template-interactive.sh  curl-job-template.sh  setup.sh  test-wheel.sh
wheel/: pyproject.toml
wheel/src/module/: dconcat_module.py
