[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dconcat_module"
version = "0.0.1"
authors = [
  { name="Demetrios Dimatos", email="dimatos@example.com" },
]
description = "Dataset concatenation utilities."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://www.ibm.com/docs/en/zoau/latest"
Issues = "https://github.com/IBM/zoau-samples/issues"